[package]
name = "swim-membership"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = "0.7.10"
bytes = {version = "1.5.0"}
anyhow = "1.0"
rand = "0.8.5"
uuid = "1.8.0"